# PeriFlakes

./: .gitignore  Readme.md  analysis.ipynb  computation.ipynb  fictitious_nodes.ipynb  surface_corrections.ipynb
PeriFlakes/: PeriBlock.py  __init__.py  batch.py  batch_dirr.py  batch_ficticious.py  bond_kernels_pop.py  ficticious_kernels_pop.py  lfm.py  nohup.out  peri_kernels_pop.py  scratch.py  simple_proto.py  test_ficticious.py
PeriFlakes/husk_bonds/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  bond_pressure.c  bond_pressure.h  bonds_lib.py  bonds_swig.i  bonds_swigPYTHON_wrap.c  cmake_install.cmake  kernels_bonds.h  line_intersection.c  line_intersection.h
PeriFlakes/husk_ficticious/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  bobaru_F.c  bobaru_F.h  bobaru_F3.c  bobaru_F3.h  bobaru_n.c  bobaru_n.h  bobaru_n3.c  bobaru_n3.h  bobaru_n3_F.c  bobaru_n3_F.h  bobaru_n_F.c  bobaru_n_F.h  bobaru_y.c  bobaru_y.h  cmake_install.cmake  ficticious_bobaru_n.c  ficticious_bobaru_n.h  ficticious_bobaru_n3.c  ficticious_bobaru_n3.h  ficticious_bobaru_y.c  ficticious_bobaru_y.h  ficticious_lib.py  ficticious_swig.i  ficticious_swigPYTHON_wrap.c  kernels_ficticious.h
PeriFlakes/husk_peridynamics/: BondBased_const.c  BondBased_const.h  BondBased_cubic.c  BondBased_cubic.h  BondBased_inv.c  BondBased_inv.h  BondBased_linear.c  BondBased_linear.h  BondBased_quadr.c  BondBased_quadr.h  BondBased_quarticA.c  BondBased_quarticA.h  BondBased_rational_0_0.c  BondBased_rational_0_0.h  BondBased_rational_0_1.c  BondBased_rational_0_1.h  BondBased_rational_0_2.c  BondBased_rational_0_2.h  BondBased_rational_1_0.c  BondBased_rational_1_0.h  BondBased_rational_1_1.c  BondBased_rational_1_1.h  BondBased_rational_1_2.c  BondBased_rational_1_2.h  BondBased_rational_2_0.c  BondBased_rational_2_0.h  BondBased_rational_2_1.c  BondBased_rational_2_1.h  BondBased_rational_2_2.c  BondBased_rational_2_2.h  CMakeCache.txt  CMakeLists.txt  Fbased_const.c  Fbased_const.h  Fbased_cubic.c  Fbased_cubic.h  Fbased_inv.c  Fbased_inv.h  Fbased_linear.c  Fbased_linear.h  (+239 more)
fem/: crack.geo  fem_crack.py  fem_nnz.py
original_paper/: constant_strain_discussion.org  linear_fracture_mechanics_discussion.org
src/: PeriBlock.py  batch.py  kernels.py  main.py  peri_kernels_pop.py  simple_proto.py  util.py
